# something-like-chatgpt-01

./: .gitignore  Readme.md  app.py  pyproject.toml  test.py
static/: scripts.js  styles.css
templates/: index.html
